# yrosd

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  DripSpecification.md  README.md  dripd.conf  dripd.service  dripd.sh  meson.build  meson_options.txt  settings.example.sh  syssettings.toml  toolchain-rpi.template.cmake  usersettings.toml  yros.md  yrosd.conf
include/: Application.h  CommandParser.h  Common.h  Config.h  Math.h  Messaging.h  Processes.h  Signals.h  String.h
include/Backend/: Backend.h  Backend.hpp  BaseBackend.h  PigpioBackend.h  SimpleBackend.h  SimpleBackend.hpp
include/Drivers/: Motor.h  Motor.hpp  MotorDriver.h  PWMServo.h
include/Servers/: FaceServer.h  MainServer.h  Server.h  Servers.h  UDPServer.h  VideoServer.h
meta/: check_code.sh  commit-msg  install_hooks.sh  pre-commit
src/: Application.cpp  CommandParser.cpp  Config.cpp  Messaging.cpp  Processes.cpp  Signals.cpp  common.c  common.h  gpio.h  logging.c  logging.h  main.c  main.cpp  motor_controller.c  motor_controller.h  networking.c  networking.h  pigpiod_if.c  pigpiod_if.h  pigpiod_if2.c  pigpiod_if2.h  server.c  server.h  settings.c  settings.h  setup.c  setup.h  sysutil.c  sysutil.h  types.h  yrosd.c  yrosd.h
src/Backend/: PigpioBackend.cpp  SimpleBackend.cpp
src/Drivers/: Motor.cpp  MotorDriver.cpp  PWMServo.cpp
src/Servers/: FaceServer.cpp  MainServer.cpp  Server.cpp  UDPServer.cpp  VideoServer.cpp
subprojects/: tomlc99.wrap
subprojects/tomlc99/: .meson-subproject-wrap-hash.txt  meson.build
